--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -10,7 +10,17 @@ $secondary-60: #eefef5;
 $accent-100: #b599ff;
 $accent-2-100: #ff7f00;
 
-$bg-white: #ffffff;
-$bg-gray-10: #fafafa;
-$bg-gray-20: #f5f5f5;
-$bg-gray-30: #e9e9e9;
+$white: #ffffff;
+$gray-10: #fafafa;
+$gray-20: #f5f5f5;
+$gray-30: #e9e9e9;
+$gray-100: #22281e;
+
+$shadow-1: 0 0 0 1px rgba(18, 18, 18, 0.07);
+$shadow-2:
+  0 0 0 1px #04261a,
+  0 0.301px 0 -1.167px rgba(255, 255, 255, 0.24) inset,
+  0 1.144px 0 -2.333px rgba(255, 255, 255, 0.21) inset;
+$shadow-3: 0 5.05px 12.625px 0 rgba(52, 52, 70, 0.15);
+
+$transition: all 300ms ease-in-out;
