add header nav menu conponent

--- a/src/components/ui/HeaderNavMenu/HeaderNavMenu.scss
+++ b/src/components/ui/HeaderNavMenu/HeaderNavMenu.scss
@@ -35,6 +35,7 @@
     opacity 500ms ease;
 
   pointer-events: none;
+  z-index: 900;
 
   &[data-open='true'] {
     transform: translateY(0) scale(1);
