--- a/src/components/ui/MobileMenu/MobileMenu.scss
+++ b/src/components/ui/MobileMenu/MobileMenu.scss
@@ -9,7 +9,8 @@
   height: calc(100% - 48px);
 
   border: 1px solid $gray-30;
-  border-radius: 8px;
+  border-top-left-radius: 8px;
+  border-top-right-radius: 8px;
 
   background-color: $gray-10;
   box-shadow: $shadow-3;
@@ -75,6 +76,7 @@
   transition: $transition;
 
   & p {
+    font-size: 14px;
     color: $secondary-text;
   }
 
