--- a/src/sass/globals.scss
+++ b/src/sass/globals.scss
@@ -15,6 +15,7 @@ body {
   padding: 0;
   min-width: 375px;
   max-width: 100vw;
+  min-height: 100vh;
   height: 100%;
   overflow: auto;
 
@@ -175,6 +176,15 @@ textarea {
   outline: none;
 }
 
+.section-general {
+  padding: 40px 0 24px;
+  background-color: $white;
+
+  @include tablet {
+    padding: 88px 0 56px;
+  }
+}
+
 .container-general {
   margin: 0 auto;
   padding: 0 16px;
@@ -183,11 +193,6 @@ textarea {
   max-width: 1440px;
   width: 100%;
 
-  &.with-borders {
-    border-right: 1px solid $gray-30;
-    border-left: 1px solid $gray-30;
-  }
-
   @include tablet {
     padding: 0 40px;
   }
@@ -195,6 +200,21 @@ textarea {
   @include desktop {
     padding: 0 160px;
   }
+}
+
+.inner-container {
+  padding-top: 40px;
+  padding-bottom: 24px;
+
+  @include tablet {
+    padding-top: 88px;
+    padding-bottom: 56px;
+  }
+}
+
+.inner-container-with-borders {
+  border-right: 1px solid $gray-30;
+  border-left: 1px solid $gray-30;
 }
 
 // for section headings that are not in the layout (must be visually hidden)
