--- a/src/components/common/InputGeneral/InputGeneral.scss
+++ b/src/components/common/InputGeneral/InputGeneral.scss
@@ -1,4 +1,5 @@
 .input-general {
+  position: relative;
   display: flex;
   flex-direction: column;
   gap: 8px;
@@ -15,6 +16,8 @@
 }
 
 .input-general__field {
+  display: inline-block;
+  padding: 12px 16px;
   width: 100%;
   height: 48px;
 
@@ -47,4 +50,19 @@
     cursor: auto;
     pointer-events: none;
   }
+
+  &.error {
+    border-color: $red !important;
+  }
+}
+
+.input-general__error-message {
+  position: absolute;
+  top: calc(100% + 4px);
+  right: 0;
+
+  font-size: 12px;
+  text-align: right;
+  line-height: 1;
+  color: $red;
 }
