--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -14,8 +14,11 @@ $white: #ffffff;
 $gray-10: #fafafa;
 $gray-20: #f5f5f5;
 $gray-30: #e9e9e9;
+$gray-80: #596055;
 $gray-90: #323a2c;
 $gray-100: #22281e;
+
+$red: #ff0000;
 
 $shadow-1: 0 0 0 1px rgba(18, 18, 18, 0.07);
 $shadow-2:
