--- a/src/components/common/SectionCommon/SectionCommon.scss
+++ b/src/components/common/SectionCommon/SectionCommon.scss
@@ -2,12 +2,19 @@
   position: relative;
 }
 
+.section-common__inner-container {
+  @include onlyMobile {
+    padding-left: 8px;
+    padding-right: 8px;
+  }
+}
+
 .section-common__bg-gradient {
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 966px;
+  max-width: 966px;
   height: 600px;
 
   background-image: url('/icons/bg-hero-svg.svg');
