--- a/src/components/common/BenefitCardList/BenefitCardList.scss
+++ b/src/components/common/BenefitCardList/BenefitCardList.scss
@@ -12,7 +12,7 @@
 
 @include largeTablet {
   .benefit-card-list {
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 
   .benefit-card-list > li:nth-child(n) {
