--- a/src/components/common/BenefitCard/BenefitCard.scss
+++ b/src/components/common/BenefitCard/BenefitCard.scss
@@ -1,12 +1,13 @@
 .benefit-card {
   display: flex;
   flex-direction: column;
-
+  justify-content: space-between;
   gap: 32px;
 
   padding: 24px;
   width: 100%;
   height: 100%;
+  min-height: 241px;
 
   background-color: $white;
 
