--- a/src/sass/globals.scss
+++ b/src/sass/globals.scss
@@ -4,10 +4,6 @@
   box-sizing: border-box;
 }
 
-html {
-  scroll-behavior: smooth;
-}
-
 body {
   display: flex;
   flex-direction: column;
@@ -124,7 +120,7 @@ h6 {
   font-size: 18px;
   font-weight: 500;
 
-  @include tablet {
+  @include desktop {
     font-size: 20px;
   }
 }
