add animated hero section to home page for mobile version

--- a/src/components/ui/HeroFlow/HeroFlow.scss
+++ b/src/components/ui/HeroFlow/HeroFlow.scss
@@ -1,4 +1,8 @@
 .heroFlow {
+  @media screen and (min-width: 375px) and (max-width: 1023.9) {
+    display: none;
+  }
+
   --step: 80px;
   overflow: hidden;
   background:
