add article component

--- a/src/components/ui/Footer/Footer.scss
+++ b/src/components/ui/Footer/Footer.scss
@@ -94,7 +94,7 @@
 .footer__nav-link {
   color: $gray-30;
 
-  $transition: $transition;
+  transition: $transition;
 
   &:hover,
   &:focus-visible {
