--- a/src/sass/globals.scss
+++ b/src/sass/globals.scss
@@ -11,7 +11,7 @@ body {
   padding: 0;
   min-width: 375px;
   max-width: 100vw;
-  min-height: 100vh;
+  min-height: 100dvh;
   height: 100%;
   overflow: auto;
 
@@ -36,7 +36,7 @@ body {
 }
 
 main {
-  flex-grow: 1;
+  min-height: calc(100dvh + 100px);
 }
 
 h1,
