--- a/src/views/ArticlePage/ArticlePage.scss
+++ b/src/views/ArticlePage/ArticlePage.scss
@@ -1,7 +1,3 @@
-.ap-article {
-  position: relative;
-}
-
 .ap-article__container {
   padding-left: 8px;
   padding-right: 8px;
@@ -53,13 +49,18 @@
 
 //----- body
 .ap-article__body {
-  display: flex;
-  flex-direction: column;
-  gap: 24px;
+  position: relative;
+  display: grid;
+  grid-template-columns: 1fr;
 
   @include largeTablet {
-    flex-direction: row;
+    grid-template-columns: 198px 1fr;
+    align-items: start;
     gap: 44px;
+  }
+
+  @include desktop {
+    grid-template-columns: 336px 1fr;
   }
 }
 
@@ -68,8 +69,16 @@
   display: flex;
   flex-direction: column;
   gap: 16px;
+  padding-bottom: 24px;
+
+  background-color: $gray-10;
 
   @include largeTablet {
+    position: sticky;
+    align-self: start;
+    top: calc(80px + 24px);
+    z-index: 500;
+
     padding-top: 24px;
     min-width: 198px;
     width: 198px;
