--- a/src/components/ui/ArticleComments/ArticleComments.scss
+++ b/src/components/ui/ArticleComments/ArticleComments.scss
@@ -1,3 +1,9 @@
+.article-comment {
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+}
+
 .article-comment__item__header {
   display: flex;
   align-items: flex-end;
@@ -57,6 +63,12 @@
   transition: $transition;
 
   &:hover {
-    opacity: 0.8;
+    color: $primary-100;
+    border-color: $primary-100;
+  }
+
+  &:active {
+    color: $primary-60;
+    border-color: $primary-60;
   }
 }
