--- a/src/components/ui/Header/Header.scss
+++ b/src/components/ui/Header/Header.scss
@@ -26,8 +26,9 @@
 }
 
 .header__logo {
-  display: inline-block;
-  padding: 8px;
+  display: flex;
+  align-items: center;
+  gap: 8px;
 
   font-size: 32px;
   font-weight: 700;
