--- a/src/components/ui/HeroFlow/HeroFlow.scss
+++ b/src/components/ui/HeroFlow/HeroFlow.scss
@@ -66,6 +66,10 @@
   width: 100%;
   height: 100%;
   pointer-events: none;
+
+  & [data-perimeter] {
+    filter: drop-shadow(0 0 6px rgba(58, 230, 97, 0.55));
+  }
 }
 .heroFlow__cardsLayer {
   position: absolute;
