--- a/src/components/ui/HeroHomePageMobile/HeroHomePageMobile.scss
+++ b/src/components/ui/HeroHomePageMobile/HeroHomePageMobile.scss
@@ -21,9 +21,9 @@
       $gray-30 var(--step)
     );
 
-  // @include largeTablet {
-  display: none;
-  // }
+  @include largeTablet {
+    display: none;
+  }
 }
 
 .hero-home-page-mobile__container {
@@ -70,6 +70,8 @@
 }
 
 .hero-home-page-mobile__bg-image-wrapper {
+  position: relative;
+  z-index: 100;
   margin: 0 auto;
   padding: 5px;
   width: 360px;
