testing-4 animations for Safari

--- a/src/components/common/AuroraBackground/AuroraBackground.scss
+++ b/src/components/common/AuroraBackground/AuroraBackground.scss
@@ -45,7 +45,7 @@
   bottom: -10px;
   pointer-events: none;
   opacity: 0.1;
-  filter: blur(24px) saturate(120%) brightness(102%);
+  // filter: blur(24px) saturate(120%) brightness(102%);
   // filter: blur(18px) saturate(115%) brightness(102%);
   background-image: var(--white-gradient), var(--aurora);
   // background-size: 300%, 200%;
