--- a/src/components/ui/HeroFlow/HeroFlow.scss
+++ b/src/components/ui/HeroFlow/HeroFlow.scss
@@ -56,9 +56,9 @@
 
 .heroFlow__stage {
   position: relative;
-  // max-width: 100%;
+  max-width: 100%;
   width: 100%;
-  // overflow: hidden;
+  overflow: hidden;
 }
 
 .heroFlow__svgPerims {
