--- a/src/views/HomePage/HomePage.scss
+++ b/src/views/HomePage/HomePage.scss
@@ -50,6 +50,13 @@
       grid-column: 1 / -1;
     }
   }
+
+  @include desktop {
+    & li:nth-child(7),
+    & li:nth-child(8) {
+      border-bottom: none;
+    }
+  }
 }
 
 // ----- bottom section
