--- a/src/components/common/AnimatedBorderBox/AnimatedBorderBox.scss
+++ b/src/components/common/AnimatedBorderBox/AnimatedBorderBox.scss
@@ -11,7 +11,7 @@
   left: 0px;
   width: 100%;
   height: 100%;
-  z-index: 200;
+  //   z-index: 200;
   background: transparent;
   overflow: hidden;
 }
