add team member

--- a/src/components/ui/TeamCard/TeamCard.scss
+++ b/src/components/ui/TeamCard/TeamCard.scss
@@ -20,7 +20,7 @@
   border-radius: 8px;
   overflow: hidden;
 
-  background-position: center;
+  background-position: top;
   background-repeat: no-repeat;
   background-size: cover;
 }
